--- a/shiro-example/shiro-example-chapter2/pom.xml
+++ b/shiro-example/shiro-example-chapter2/pom.xml
@@ -37,5 +37,24 @@
 			<artifactId>shiro-core</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>commons-logging</groupId>
+		    <artifactId>commons-logging</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		
+		<!-- JDBC Realm所需的 -->
+		<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.25</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>0.2.23</version>
+        </dependency>
+		
 	</dependencies>
 </project>
